--- a/.github/dbt_deploy.yml
+++ b/.github/dbt_deploy.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Install dbt and adapter
         run: |
-          pip install dbt-snowflake==1.5.0 # Folosește o versiune specifică pentru consistență
-          pip install dbt-expectations dbt-utils # Instalează și pachetele
+          pip install dbt-snowflake==1.5.0
+          pip install dbt-expectations dbt-utils
 
       - name: Create dbt profiles.yml
         # Generează profiles.yml dinamic folosind variabilele de mediu
