--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,5 @@
 # dbt_real_estate_project/packages.yml
 packages:
   - package: dbt-labs/dbt_utils
-    version: 1.3.0 # Sau cea mai recentă versiune compatibilă. Verifică pe hub.getdbt.com
-  - package: metaplane/dbt_expectations
+    version: 1.3.0 # Sau cea mai recentă versiune compatibilă. Verifică pe hub.getdbt.coms
     version: 0.10.5 # Sau cea mai recentă versiune compatibilă. Verifică pe hub.getdbt.com
