--- a/.github/workflows/dbt_deploy.yml
+++ b/.github/workflows/dbt_deploy.yml
@@ -8,7 +8,7 @@ on:
       - master # Sau 'master' dacă folosești acest nume
     schedule:
     # Rulează în fiecare zi la ora 5:00 AM UTC
-      - cron: '3 * * * *'
+      - cron: '/2 * * * *'
       #- cron: '0 5 * * *'
 jobs:
   run_dbt_models:
