--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,6 @@
-# dbt_real_estate_project/packages.yml
+
 packages:
   - package: dbt-labs/dbt_utils
-    version: 1.3.0 # Sau cea mai recentă versiune compatibilă. Verifică pe hub.getdbt.com
+    version: 1.3.0 
   - package: metaplane/dbt_expectations
-    version: 0.10.5 # Sau cea mai recentă versiune compatibilă. Verifică pe hub.getdbt.com
+    version: 0.10.5 
